--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clsx": "^1.2.1",
     "hoist-non-react-statics": "^3.3.2",
     "json-server": "^0.17.0",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -24,7 +25,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p start:*",
+    "start:react": "react-scripts start",
+    "start:server": "json-server --port 3131 --no-cors --delay 250 --watch public/db/app.json --routes public/db/routes.json",  
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
