Fix people & bill amount values when table is not busy

--- a/public/db/app.json
+++ b/public/db/app.json
@@ -1,10 +1,10 @@
 {
   "tables": [
     {
-      "status": "Reserved",
-      "peopleAmount": "4",
+      "status": "Free",
+      "peopleAmount": "0",
       "maxPeopleAmount": "4",
-      "bill": "20",
+      "bill": "0",
       "id": "1"
     },
     {
